# Football-Game-Engine

./: CMakeLists.txt  README.md  main.cpp  manager.cpp  manager.h  user_interface.cpp  user_interface.h
DecoratorPattern/: defender.cpp  defender.h  engine.cpp  engine.h  fieldplayer.h  forward.h  goalkeeper.h  midfielder.cpp  midfielder.h  player.h  playerrole.cpp  playerrole.h
ObserverPattern/: ball.cpp  ball.h  engine.cpp  engine.h  football.cpp  football.h  iobserver.h  player.cpp  player.h  position.cpp  position.h  referee.cpp  referee.h
StrategyPattern/: attackstrategy.cpp  attackstrategy.h  defendstrategy.cpp  defendstrategy.h  engine.cpp  engine.h  team.cpp  team.h  teamstrategy.h
decorator/: defender.h  fieldplayer.cpp  forward.cpp  forward.h  goalkeeper.cpp  midfielder.h  player.cpp  playerrole.h
observer/: ball.cpp  ball.h  football.cpp  football.h  iobserver.h  player.cpp  player.h  position.cpp  position.h  referee.cpp  referee.h
strategy/: attackstrategy.h  defendstrategy.cpp  team.h  teamstrategy.h
